Refatoração para adição na Documentação Swagger - Categorias de Usuário
